# codex-hud

./: CLAUDE.md  Cargo.toml  README.md
src/: codex_config.rs  config.rs  git.rs  main.rs  rollout_parser.rs  session_finder.rs  tmux.rs  types.rs  watcher.rs
src/render/: bars.rs  colors.rs  mod.rs
src/render/lines/: context.rs  environment.rs  mod.rs  plan.rs  project.rs  tools.rs  usage.rs
tests/fixtures/: sample_rollout.jsonl
