[package]
name = "codex-hud"
version = "0.1.0"
edition = "2021"
description = "Real-time HUD for OpenAI Codex CLI via tmux"
license = "MIT"

[dependencies]
crossterm = "0.28"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
notify = "7"
clap = { version = "4", features = ["derive"] }
chrono = "0.4"

[dev-dependencies]
assert_cmd = "2"
tempfile = "3"

[profile.release]
strip = true
lto = true
